# Simulate_Shenzhen_Subway_Ticketing_System

./: LICENSE  README.md
Shenzhen_metro_ticket_sale_system/: CMakeLists.txt  checkstand.cpp  checkstand.h  checkstand.ui  form.cpp  line.cpp  line.h  line.ui  main.cpp  mainwindow.ui  map.cpp  map.h  map.ui  no.cpp  no.h  no.ui  welcome.cpp  welcome.h  welcome.ui  yes.cpp  yes.h  yes.ui
build-Shenzhen_metro_ticket_sale_system-Desktop_Qt_6_2_3_MinGW_64_bit-Release/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Shenzhen_metro_ticket_sale_system-Desktop_Qt_6_2_3_MinGW_64_bit-Release/Shenzhen_metro_ticket_sale_system_autogen/: deps  mocs_compilation.cpp
build-Shenzhen_metro_ticket_sale_system-Desktop_Qt_6_2_3_MinGW_64_bit-Release/Shenzhen_metro_ticket_sale_system_autogen/EWIEGA46WW/: moc_checkstand.cpp  moc_checkstand.cpp.d  moc_line.cpp  moc_line.cpp.d  moc_map.cpp  moc_map.cpp.d  moc_no.cpp  moc_no.cpp.d  moc_welcome.cpp  moc_welcome.cpp.d  moc_yes.cpp  moc_yes.cpp.d
build-Shenzhen_metro_ticket_sale_system-Desktop_Qt_6_2_3_MinGW_64_bit-Release/Shenzhen_metro_ticket_sale_system_autogen/include/: ui_checkstand.h  ui_line.h  ui_map.h  ui_no.h  ui_welcome.h  ui_yes.h
